[package]
name = "oslog"
description = "A minimal safe wrapper around Apple's Logging system"
repository = "https://github.com/steven-joruk/oslog"
version = "1.0.0-rc.1"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["log", "logging", "macos", "apple"]
categories = ["development-tools::debugging"]

[features]
default = ["log"]

# Enables support for the log crate.
log = ["dep:log"]

[dependencies]
log = { version = "0.4.14", default-features = false, features = ["std"], optional = true }

[build-dependencies]
cc = "1.0.73"
