[package]
name = "oslog"
description = "A minimal safe wrapper around Apple's Logging system"
repository = "https://github.com/steven-joruk/oslog"
version = "0.2.1"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["log", "logging", "macos", "apple"]
categories = ["development-tools::debugging"]

[features]
default = ["logger"]

# Enables support for the `log` crate.
logger = ["dashmap", "log"]

# Enables usage with `log4rs` crate
log4rs = ["logger", "derivative"]

[dependencies]
log = { version = "0.4.14", default-features = false, features = ["std"], optional = true }
dashmap = { version = "5.1.0", optional = true }
derivative = { version = "2.2.0", optional = true }

[build-dependencies]
cc = "1.0.73"

[dev-dependencies]
log4rs = "1.3.0"